--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-appdirs==1.4.3
-biopython==1.68
-click==6.7
-Flask==0.12
-itsdangerous==0.24
-Jinja2==2.9.5
-MarkupSafe==1.0
-packaging==16.8
-pyparsing==2.2.0
-pysam==0.10.0
-six==1.10.0
-Werkzeug==0.12.1
+biopython
+Flask
+pysam
+gunicorn
